# ihs29x-python

./: .gitignore  Makefile  README.md  pyproject.toml
docs/: ihs29x.html  index.html  search.js
src/ihs29x/: __init__.py
