[build-system]
requires = ["flit_core"]
build-backend = "flit_core.buildapi"

[project]
name = "ihs29x"
dynamic = ["version"]
description = "Spec-driven minimalist parser for IHS 297 and 298 formats"
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Derrick W. Turk", email = "dwt@terminusdatascience.com" }]
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: Implementation :: CPython",
]
dependencies = ["importlib-resources"]

[project.optional-dependencies]
dev = ["build", "mypy", "vulture"]
docs = ["pdoc"]
